--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,42 @@
 	<id>confuser-repo</id>
 	<url>http://jamesmortemore.com:8080/plugin/repository/everything</url>
     </repository>
+    <repository>
+        <id>ACzExtension-mvn-repo</id>
+        <url>https://raw.github.com/ACzChef/ACzExtension/mvn-repo/</url>
+        <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>always</updatePolicy>
+        </snapshots>
+    </repository>
   </repositories>
+  
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>1.4</version>
+            <executions>
+                <execution>
+                    <id>ShadedBundle</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <shadedClassifierName>Bundle</shadedClassifierName>
+                        <artifactSet>
+                           <includes>
+                                <include>com.aczchef:ACzExtension:jar:*</include>
+                            </includes>
+                        </artifactSet>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
   
   <dependencies>
     <dependency>
@@ -43,6 +78,12 @@
       <artifactId>BarAPI</artifactId>
       <version>2.0</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.aczchef</groupId>
+      <artifactId>ACzExtension</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>jar</type>
     </dependency>
   </dependencies>
 </project>
