--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </repository>  
     <repository>
 	<id>confuser-repo</id>
-	<url>http://jamesmortemore.com:8080/plugin/repository/everything</url>
+	<url>http://ci.frostcast.net/plugin/repository/everything</url>
     </repository>
   </repositories>
   
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>me.confuser</groupId>
       <artifactId>BarAPI</artifactId>
-      <version>2.0</version>
+      <version>3.3</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
