--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
   <groupId>com.aczchef</groupId>
   <artifactId>CHBarAPI</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>CHBarAPI</name>
-  <url>http://maven.apache.org</url>
+  <url>https://letsbuild.net/jenkins/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,13 +35,13 @@
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>commandhelper</artifactId>
-      <version>3.3.1-SNAPSHOT</version>
+      <version>3.3.2-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>me.confuser</groupId>
       <artifactId>BarAPI</artifactId>
-      <version>3.3</version>
+      <version>3.4-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
